add tests for parse/compare

--- a/.github/workflows/release-packaging.yaml
+++ b/.github/workflows/release-packaging.yaml
@@ -1,6 +1,8 @@
 # https://github.com/BamPeers/rust-ci-github-actions-workflow
 
-on: release
+on:
+  release:
+    types: [published]
 
 name: Release Packaging
 
