--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,23 +42,22 @@ jobs:
             ~/.cargo/registry/cache
             target
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Cargo.lock') }}
+  coverage:
+    name: Coverage
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+      - name: Setup just
+        uses: extractions/setup-just@v1
       - name: Generate test result and coverage report
         run: |
-          cargo install cargo2junit grcov;
-          cargo test $CARGO_OPTIONS -- -Z unstable-options --format json | cargo2junit > results.xml;
-          zip -0 ccov.zip `find . \( -name "$PROJECT_NAME_UNDERSCORE*.gc*" \) -print`;
-          grcov ccov.zip -s . -t lcov --llvm --ignore-not-existing --ignore "/*" --ignore "tests/*" -o lcov.info;
-      - name: Upload test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        with:
-          check_name: Test Results
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: results.xml
-      # TODO
-      # - name: Upload to CodeCov
-      #   uses: codecov/codecov-action@v1
-      #   with:
-      #     # required for private repositories:
-      #     # token: ${{ secrets.CODECOV_TOKEN }}
-      #     files: ./lcov.info
-      #     fail_ci_if_error: true
+          cargo install cargo-tarpaulin
+          just coverage
+        env:
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
