--- a/.github/workflows/release-packaging.yaml
+++ b/.github/workflows/release-packaging.yaml
@@ -21,7 +21,7 @@ jobs:
           toolchain: nightly
           override: true
       - name: Release Build
-        run: cargo build --release
+        run: cargo build -p semverator --release
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
@@ -41,3 +41,8 @@ jobs:
       - uses: katyo/publish-crates@v2
         with:
             registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+            path: './cli'
+      - uses: katyo/publish-crates@v2
+        with:
+            registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+            path: './lib'
