--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,3 +15,6 @@ anyhow = "1.0.75"
 clap = { version = '4.4.2', features = ['cargo'] }
 regex = "1.9.5"
 libsemverator = { path = "../lib" }
+
+[lints.rust]
+unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
