--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,7 +3,7 @@ name = "libsemverator"
 version = "0.6.0"
 edition = "2021"
 license = "Apache-2.0"
-readme = "README.md"
+readme = "../README.md"
 description = "A library for working with semantic versioning (libpkgx implementation)"
 homepage = "https://github.com/jhheider/semverator"
 repository = "https://github.com/jhheider/semverator"
