--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libsemverator"
-version = "0.7.1"
+version = "0.7.2"
 edition = "2021"
 license = "Apache-2.0"
 readme = "../README.md"
@@ -15,4 +15,5 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.75"
+lazy_static = "1.5.0"
 regex = "1.9.5"
