--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,8 @@ jobs:
             ~/.cargo/registry/cache
             target
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Cargo.lock') }}
-      - run: cargo test --all-features
+      - name: Test
+        run: cargo test --all-features
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
