improve test coverage
and make it easy to run with docker

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -17,3 +17,6 @@ crate-type = ["cdylib", "rlib"]
 anyhow = "1.0.75"
 lazy_static = "1.5.0"
 regex = "1.9.5"
+
+[lints.rust]
+unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
