--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,9 @@ on:
 
 name: Test with Code Coverage
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+
 permissions:
   contents: read
   checks: write
@@ -15,13 +18,19 @@ permissions:
 
 jobs:
   test:
-    name: Test
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    name: Test (${{ matrix.os }})
     env:
       PROJECT_NAME_UNDERSCORE: semverator
       CARGO_INCREMENTAL: 0
       RUSTFLAGS: -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort -D warnings
       RUSTDOCFLAGS: -Cpanic=abort
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
